--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "0.13.4",
     "axios": "^1.13.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3",
-    "@react-oauth/google": "0.13.4"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "6.22.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.2.1",
-    "vite": "5.2.8",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vite": "5.2.8"
   }
 }
